[project]
name = "pokerbot"
version = "0.1.0"
description = "Бот для отслеживания статистики покерных игр"
authors = [
    {name = "Николай Марков"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
